fix : 헤더 고정시 요소 위치 수정 및 header 태그의 z-index 수정

--- a/FE.css
+++ b/FE.css
@@ -71,7 +71,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding : 0 320px;
+    padding : 136px 320px 0;
 }
 .headerText {
     display: flex;
