--- a/FEmobile.css
+++ b/FEmobile.css
@@ -12,7 +12,7 @@ body {
 }
 header {
     position: relative;
-    z-index : 1;
+    z-index : 2;
     width: 390px;
     height: 794px;
     background-color: #f5e9d8;
@@ -21,10 +21,11 @@ header {
 .headerContainer {
     position : fixed;
     background-color : #f5e9d8;
-    z-index : 500;
+    z-index : 5000;
     width: 390px;
     height: 76px;
 }
+
 .headerContent {
     display: flex;
     justify-content: space-between;
@@ -116,9 +117,6 @@ header {
 }
 main {
     margin : 0 32px;
-}
-.lyingDivImg {
-
 }
 .lyingDiv img {
     width: 326px;
